--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,55 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Ignore compiled output:
+dist
+node_modules
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Logs:
+logs
+*.log
+pnpm-debug.log*
 
-# testing
-/coverage
+# OS:
+.DS_Store
 
-# next.js
-/.next/
-/out/
+# Tests:
+coverage
+.nyc_output
 
-# production
-/build
+# IDE - VSCode:
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-# misc
+# IDEs and others editors:
+.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Turborepo:
+.turbo
+
+# Next.js:
+.next/
+out/
+
+# Build:
+build
+
+# Misc:
 .DS_Store
 *.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# env files (can opt-in for commiting if needed)
+# Local env files:
 .env*
 
-# vercel
+# Vercel:
 .vercel
 
-# typescript
+# Typescript:
 *.tsbuildinfo
 next-env.d.ts
